--- a/css/colorpicker.css
+++ b/css/colorpicker.css
@@ -1,22 +1,26 @@
 .colorpicker {
-	width: 356px;
-	height: 176px;
+	width: 212px;
+	height: 236px;
 	overflow: hidden;
 	position: absolute;
 	background: url(../images/colorpicker_background.png);
 	font-family: Arial, Helvetica, sans-serif;
 	display: none;
+	box-shadow: 0px 1px 1px #898989;
+	border-radius: 2px;
 }
+
 .colorpicker_color {
 	width: 150px;
 	height: 150px;
 	left: 14px;
-	top: 13px;
+	top: 15px;
 	position: absolute;
 	background: #f00;
 	overflow: hidden;
 	cursor: crosshair;
 }
+
 .colorpicker_color div {
 	position: absolute;
 	top: 0;
@@ -25,6 +29,7 @@
 	height: 150px;
 	background: url(../images/colorpicker_overlay.png);
 }
+
 .colorpicker_color div div {
 	position: absolute;
 	top: 0;
@@ -35,14 +40,16 @@
 	background: url(../images/colorpicker_select.gif);
 	margin: -5px 0 0 -5px;
 }
+
 .colorpicker_hue {
 	position: absolute;
-	top: 13px;
+	top: 15px;
 	left: 171px;
 	width: 35px;
 	height: 150px;
 	cursor: n-resize;
 }
+
 .colorpicker_hue div {
 	position: absolute;
 	width: 35px;
@@ -52,53 +59,59 @@
 	margin: -4px 0 0 0;
 	left: 0px;
 }
-.colorpicker_new_color {
-	position: absolute;
-	width: 60px;
-	height: 30px;
-	left: 213px;
-	top: 13px;
-	background: #f00;
+
+.colorpicker_new_color, .colorpicker_current_color, .colorpicker_submit {
+	display: none;
 }
-.colorpicker_current_color {
+
+.colorpicker_hex {
 	position: absolute;
-	width: 60px;
-	height: 30px;
-	left: 283px;
-	top: 13px;
-	background: #f00;
+	width: 187px;
+	height: 42px;
+	left: 12px;
+	bottom: 14px;
+	padding-left: 10px;
+	border-radius: 3px;
+	background-color: #FFF;
+	border: solid #aeb5c2 1px;
+	display: flex;
+	align-items: center;
+	box-shadow: inset 0 0px 1px #aeb5c2;
 }
+
+.colorpicker_hex span {
+	color: #898989;
+	font-size: 15px;
+}
+
 .colorpicker input {
 	background-color: transparent;
 	border: 1px solid transparent;
 	position: absolute;
-	font-size: 10px;
+	font-size: 15px;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #898989;
-	top: 4px;
-	right: 11px;
-	text-align: right;
+	text-align: left;
 	margin: 0;
 	padding: 0;
-	height: 11px;
+	height: 100%;
+	left: 20px;
+	width: calc(100% - 20px);
+	text-transform: uppercase;
 }
-.colorpicker_hex {
-	position: absolute;
-	width: 72px;
-	height: 22px;
-	background: url(../images/colorpicker_hex.png) top;
-	left: 212px;
-	top: 142px;
+
+.colorpicker_hex input:focus {
+	outline: 0 !important;
 }
-.colorpicker_hex input {
-	right: 6px;
-}
+
 .colorpicker_field {
 	height: 22px;
 	width: 62px;
 	background-position: top;
 	position: absolute;
+	display: none;
 }
+
 .colorpicker_field span {
 	position: absolute;
 	width: 12px;
@@ -108,54 +121,47 @@
 	right: 0;
 	cursor: n-resize;
 }
-.colorpicker_rgb_r {
-	background-image: url(../images/colorpicker_rgb_r.png);
-	top: 52px;
-	left: 212px;
-}
-.colorpicker_rgb_g {
-	background-image: url(../images/colorpicker_rgb_g.png);
-	top: 82px;
-	left: 212px;
-}
-.colorpicker_rgb_b {
-	background-image: url(../images/colorpicker_rgb_b.png);
-	top: 112px;
-	left: 212px;
-}
-.colorpicker_hsb_h {
-	background-image: url(../images/colorpicker_hsb_h.png);
-	top: 52px;
-	left: 282px;
-}
-.colorpicker_hsb_s {
-	background-image: url(../images/colorpicker_hsb_s.png);
-	top: 82px;
-	left: 282px;
-}
-.colorpicker_hsb_b {
-	background-image: url(../images/colorpicker_hsb_b.png);
-	top: 112px;
-	left: 282px;
-}
-.colorpicker_submit {
-	position: absolute;
-	width: 22px;
-	height: 22px;
-	background: url(../images/colorpicker_submit.png) top;
-	left: 322px;
-	top: 142px;
-	overflow: hidden;
-}
+
 .colorpicker_focus {
 	background-position: center;
 }
+
 .colorpicker_hex.colorpicker_focus {
 	background-position: bottom;
 }
+
 .colorpicker_submit.colorpicker_focus {
 	background-position: bottom;
 }
+
 .colorpicker_slider {
 	background-position: bottom;
+}
+
+.customWidget{
+	position: relative;
+	margin-top: 10px;
+}
+
+.colorSelector{
+	height: 40px;
+	display: inline-flex;
+	align-items: center;
+}
+
+.colorSelector div{
+width: 46px;
+	height: 22px;
+	border-radius: 3px;
+	margin-right: 10px;
+box-shadow: inset 0 0 0 1px rgba(0,0,0,.1);
+}
+
+.colorpickerHolder{
+	top: 32px;
+	left: 0;
+	width: 356px;
+	height: 0;
+	overflow: hidden;
+	position: absolute;
 }
